# tree-sitter-ktav

./: .gitattributes  .gitignore  CHANGELOG.md  CHANGELOG.ru.md  CHANGELOG.zh.md  Cargo.toml  LICENSE  README.md  README.ru.md  README.zh.md  binding.gyp  grammar.js  package.json
.github/workflows/: ci.yml  release.yml
bindings/node/: binding.cc
bindings/rust/: build.rs  lib.rs
queries/: highlights.scm  injections.scm  locals.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: basic.txt  comments.txt  compound_array.txt  compound_object.txt  dotted_keys.txt  edge_keys.txt  empty_compound.txt  keywords.txt  mixed.txt  multiline_string.txt  nested.txt  typed_markers.txt
